Refactored backend to use UUID instead of Player.